<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) 2010-2011  Dmitry Petuhov
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program.  If not, see <http://www.gnu.org/licenses/>.
-->
<resources>

    <string name="app_name">Apteryx australis</string>
    <string name="account_title">Новый аккаунт</string>
    <string name="account_login">ЛОГИН</string>
    <string name="account_empty_login">Укажите логин</string>
    <string name="account_password">Пароль</string>
    <string name="account_empty_password">Укажите пароль</string>
    <string name="account_terminal_id">ID терминала</string>
    <string name="account_empty_terminal">Укажите id терминала</string>
    <string name="account_empty_login_error">Для работы нам необходим логин. Пожалуйста, укажите ваш.</string>
    <string name="account_empty_password_error">Для аккаунта необходим пароль. Пожалуйста, укажите тот что подходит к вашему.</string>
    <string name="account_empty_terminal_error">Для работы нам нужен идентификатор терминала. Пожалуйста, укажите какой-нибудь из действитеьно существующих.</string>
    <string name="one_menute_pleas">Одну минуточку…</string>
    <string name="account_being_checking">Пожалуйста, подождите пока мы проверяем ваши учетные данные и инициализируем аккаунт. Это не должно занять много времени.</string>
    <string name="button_next">Дальше</string>
    <string name="button_stop">Стоп</string>
    <string name="button_ok">OK</string>
    <string name="empty_account"><i>Аккаунт не выбран</i></string>
    <string name="add_new_account">Добавить новый аккаунт</string>
    <string name="edit_account">Изменить аккаунт</string>
    <string name="synchronize_account">Синхронизировать</string>
    <string name="account_empty_message">Для того что бы приложение смогло нормально работать ему необходим хотя бы один аккаунт. Пожалуйста, добавьте ваш, нажав на кнопку под этим текстом. Если у вас нет аккаунта и вы понятия не имеете о чем вас просят, попробуйте почиать текст по этой &lt;a href=\"%1$s\"&gt;ссылке&lt;/a&gt;. Должно помочь.</string>
    <string name="account_not_synchronized">Аккаунт не синхронизирован с сервером, возможно из-за ошибки соединения. Попробуйте синхронизировать его еще раз</string>
    <string name="account_invalid">Сервер сказал нам что учетные данные не верны. Перепроверьте указанные данные.</string>
    <string name="account_blocked">Сервер сказал нам что аккаунт заблокирован.</string>
    <string name="agents">Агенты</string>
    <string name="terminal_info_money">Деньги</string>
    <string name="terminal_info_money_ammount">Сумма</string>
    <string name="terminal_info_last_payment">Время последнего платежа</string>
    <string name="terminal_info_last_activity">Время последней актвности</string>
    <string name="see_more">Посмотреть все</string>
    <string name="see_less">Свернуть</string>

    <!--
    string name="last_update">Последнее обновление</string>
    <string name="balance">Баланс</string>
    <string name="overdraft">Овердрафт</string>
    <string name="error">Ошибка</string>
    <string name="agents_list">Список агентов</string>
    <string name="last_activity">п. активность: </string>
    <string name="last_payment">п. платеж: </string>
    <string name="refreshed">обновлено:</string>
    <string name="settings">Настройки</string>
    <string name="refresh">Обновить статусы</string>
    <string name="title">Отображамое имя</string>
    <string name="login">Логин</string>
    <string name="empty_login">Укажите логин</string>
    <string name="password">Пароль</string>
    <string name="empty_password">Укажите пароль</string>
    <string name="terminal_id">ID терминала</string>
    <string name="empty_terminal">Укажите id терминала</string>
    <string name="add_account_auth_title">Укажите данные учетной записи</string>
    <string name="next">Дальше</string>
    <string name="done">Готово</string>
    <string name="select_main_agent">Укажите основного агента</string>
    <string name="select_active_agents">Укажите агентов за терминалами которых надо следить</string>
    <string name="accounts_list">Список аккаунтов</string>
    <string name="accounts">Аккаунты</string>
    <string name="add">Добавить аккаунт</string>
    <string name="change_password">Изменить пароль</string>
    <string name="edit">Изменить</string>
    <string name="delete">Удалить</string>
    <string name="cancel">Отмена</string>
    <string name="delete_confirm">Вы уверены что хотите удалить аккаунт</string>
    <string name="updates_and_statuses">Обновления и статусы</string>
    <string name="auth_process">Проверка аккаунта</string>
    <string name="network_error">Не могу проверить аккаунт. Ошибка сети.</string>
    <string name="auth_error">Неверные учетные данные</string>
    <string name="printer">Принтер</string>
    <string name="cachebin">Купюроприемник</string>
    <string name="fullinfo_tid">Номер терминала:</string>
    <string name="fullinfo_aid">Номер агента:</string>
    <string name="fullinfo_an">Наименование агента:</string>
    <string name="fullinfo_cash">Cумма наличных:</string>
    <string name="fullinfo_bonds">Число купюр:</string>
    <string name="fullinfo_last_activity">Дата последней активности:</string>
    <string name="fullinfo_last_payment">Дата последнего платежа:</string>
    <string name="fullinfo_signal_level">Уровень сигнала:</string>
    <string name="fullinfo_balance">Баланс сим карты:</string>
    <string name="fullinfo_soft_version">Версия ПО:</string>
    <string name="fullinfo_printer">Принтер:</string>
    <string name="fullinfo_cashbin">Купюроприемник:</string>
    <string name="fullinfo_bonds10">10ки:</string>
    <string name="fullinfo_bonds50">50ки:</string>
    <string name="fullinfo_bonds100">100ки:</string>
    <string name="fullinfo_bonds500">500ки:</string>
    <string name="fullinfo_bonds1000">1000е:</string>
    <string name="fullinfo_bonds5000">5000е:</string>
    <string name="fullinfo_pays_per_hour">Средние количество платежей в час:</string>
    <string name="fullinfo_address">Адрес:</string>
    <string name="doesnt_response">не отвечает</string>
    <string name="settings_autocheck_title">Автоматическая проверка</string>
    <string name="settings_autocheck">Проверять автоматически</string>
    <string name="settings_checksummary">Проверть состояние терминалов через заданный интервал</string>
    <string name="settings_interval">Интервал обновления</string>
    <string name="settings_notify">Уведомления</string>
    <string name="settings_usevibro">Использовать вибрацию</string>
    <string name="settings_melody">Сигнал уведомления</string>
    <string name="settings_receive_payments">Получать последние платежи</string>
    <string name="settings_payments_description">Данная опция требует большого потребления трафика</string>
    <string name="interval_15m">каждые 15 минут</string>
    <string name="interval_30m">каждые 30 минут</string>
    <string name="interval_1h">каждый час</string>
    <string name="interval_3h">каждые 3 часа</string>
    <string name="interval_6h">каждые 6 часов</string>
    <string name="interval_12h">каждые 12 часов</string>
    <string name="interval_1d">раз в день</string>
    <string name="no_sound">Без звука</string>
    <string name="default_sound">Звук по умолчанию</string>
    <string name="service_starte">Запущена автоматическая проверка</string>
    <string name="update_service">Проверка терминалов</string>
    <string name="data_restore">Восстановление данных</string>
    <string name="statuses_refresh">Обновление статусов</string>
    <string name="status_refresh">Обновление статуса</string>
    <string name="terminals_errors">Возникли проблемы с терминалом</string>
    <string name="terminal">Терминал</string>
    <string name="activity_timeout_title">Не было активности</string>
    <string name="payment_timeout_title">Платежа не было</string>
    <string name="yesterday">вчера</string>
    <string name="tomorrow">завтра</string>
    <string name="reboot">Перезагрузить</string>
    <string name="switchoff">Выключить</string>
    <string name="warn_level">Уровень предупреждения</string>
    <string name="cant_obtain_storage">Не могу получить экземпляр хранилища</string>
    <string name="reboot_command_sended">Команда перезагрузки отправлена</string>
    <string name="how_to_add_acc"><a href="#">Как добавить аккаунт?</a></string
    -->

    <string name="title_activity_main">MainActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_terminal_info">TerminalInfoActivity</string>

</resources>
