<!--
  ~ Copyright (C) 2010-2015  Dmitry "PVOID" Petuhov
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program.  If not, see <http://www.gnu.org/licenses/>.
  -->

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context="org.pvoid.apteryx.views.terminals.TerminalInfoFragment">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <android.support.v7.widget.CardView
            android:id="@+id/terminal_info_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardUseCompatPadding="true"
            style="@style/TerminalInfoCard">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/terminal_title"
                    style="@style/TerminalInfoCard.Title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:text="Terminal Title"/>
                <TextView
                    android:id="@+id/terminal_address"
                    style="@style/TerminalInfoCard.Address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:text="Terminal address line"/>
                <View
                    style="@style/TerminalInfoCard.Line"/>
                <TextView
                    style="@style/TerminalInfoCard.Item.Title"
                    android:text="@string/terminal_info_last_activity"/>
                <TextView
                    android:id="@+id/terminal_last_activity"
                    style="@style/TerminalInfoCard.Item.Value"
                    tools:text="17 Марта, 15:58"/>
                <View
                    style="@style/TerminalInfoCard.Line"/>
                <org.pvoid.apteryx.views.ExpandableView
                    android:id="@+id/terminal_states"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:textMore="@string/see_more"
                    app:textLess="@string/see_less"/>
            </LinearLayout>
        </android.support.v7.widget.CardView>
        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardUseCompatPadding="true"
            style="@style/TerminalInfoCard">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    style="@style/TerminalInfoCard.CardTitle"
                    android:text="@string/terminal_info_money"/>
                <View
                    style="@style/TerminalInfoCard.Line"/>
                <TextView
                    style="@style/TerminalInfoCard.Item.Title"
                    android:text="@string/terminal_info_money_ammount"/>
                <TextView
                    android:id="@+id/terminal_cash"
                    style="@style/TerminalInfoCard.Item.Value"
                    tools:text="20 000$, 10 000€, 5Ꝑ"/>
                <View
                    style="@style/TerminalInfoCard.Line"/>
                <TextView
                    style="@style/TerminalInfoCard.Item.Title"
                    android:text="@string/terminal_info_last_payment"/>
                <TextView
                    android:id="@+id/terminal_last_payment"
                    style="@style/TerminalInfoCard.Item.Value"
                    tools:text="17 Марта, 15:18"/>
            </LinearLayout>
        </android.support.v7.widget.CardView>
    </LinearLayout>
</ScrollView>
