<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) 2010-2014  Dmitry "PVOID" Petuhov
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program.  If not, see <http://www.gnu.org/licenses/>.
  -->

<org.pvoid.apteryx.views.SlidingLinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:elevation="6dp"
    android:background="#fff"
    android:padding="@dimen/window_padding">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Text.Header"
        android:text="@string/one_menute_pleas"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/window_padding"
        android:layout_marginBottom="@dimen/window_padding"
        android:text="@string/account_being_checking"/>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0px"
        android:layout_weight="1">
        <ProgressBar
            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
            android:layout_gravity="center_vertical"
            android:indeterminate="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </FrameLayout>
    <Button
        style="@style/Button.Wizard"
        android:text="@string/button_stop"/>
</org.pvoid.apteryx.views.SlidingLinearLayout>